...
                            <constraint firstItem="ZU9-Ee-WYp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EFh-XJ-g1J"/>
                            <constraint firstItem="ZU9-Ee-WYp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Y6q-ly-ECD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="4tR-lH-2bV">
                        <barButtonItem key="leftBarButtonItem" title="Menu" id="WdX-UT-lhP">
                            <connections>
                                <segue destination="TXC-Jo-aug" kind="presentation" id="c1w-m0-aRr"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
...
                                            <action selector="openEricView:" destination="M17-f8-Jfd" eventType="touchUpInside" id="Q8F-Q7-ME3"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gys-zb-EL2">
                                        <rect key="frame" x="0.0" y="124" width="414" height="52"/>
                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.20205215669014084" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="iTunes">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="openPhongView:" destination="M17-f8-Jfd" eventType="touchUpInside" id="6pa-KM-DNi"/>
                                        </connections>
                                    </button>
...
