...
        
        // View
        searchBar.threeSidesConstraintWithHeight(yAnchor: searchBar.topAnchor, yConstant: 0, toYAnchor: view.safeAreaLayoutGuide.topAnchor, leftAnchor: view.leftAnchor, leftConstant: 0, rightAnchor: view.rightAnchor, rightConstant: 0, heightConstant: 60)
        searchBar.showsCancelButton = true
        searchBar.autocapitalizationType = .none
        searchBar.backgroundImage = nil
        searchBar.placeholder = "Search for songs..."
        
        // Rx
        searchBar.rx.cancelButtonClicked.subscribe { [weak self] (_) in
            guard let strongSelf = self else { return }
            if strongSelf.searchBar.isFirstResponder {
                strongSelf.searchBar.text = nil
...
