...
                    </tableView>
                    <navigationItem key="navigationItem" id="gdc-kA-bTO">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="sWA-cB-xL7">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="HLa-SV-2HR">
                                <rect key="frame" x="319" y="11" width="75" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Back" image="arrowshape.turn.up.left" catalog="system">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="backButtonHandler:" destination="IP6-P5-skp" eventType="touchUpInside" id="LSm-VD-aQw"/>
                                </connections>
                            </button>
...
